# nlp

./: .gitignore  README.md  api.py  main.html  project_structure.md  pyproject.toml
article_classification/: classified_articles.csv  classify_articles.py  formatted_articles.csv  formatted_media.csv  formatting_articles.py  formatting_media.py  politik_artikel.csv  title_link.csv
frontend/: .gitignore  README.md  articleDataExample.csv  pyproject.toml
frontend/example_data_prep/: link_to_medium.ipynb
frontend/src/: main.html  streamlitapp.py
model/: article_bias_data.py  balance_format.py  dataset_builder.py  id2label.json  label2id.json  main.py  news_article_data.py  outlet_name_variator.py  outlet_url_matchmaker.py  ratings_data.py  train_model.py
src/backend/: api.py  text_classification.py  text_classification_pt.py
src/frontend/: main.html  streamlitapp.py
src/training/: =0.26.0  article_bias_data.py  dataset_builder.py  model_trainer.py  outlet_name_variator.py  outlet_url_matchmaker.py  text_classification_dataset.py  weighted_loss_trainer.py
tests/: test_article_bias_data.py  test_dataset_builder.py  test_model_trainer.py  test_news_article_data.py  test_outlet_name_variator.py  test_text_classification_dataset.py  tests.py
training/: article_bias_data.py  dataset_builder.py  model_trainer.py  news_article_data.py  outlet_name_variator.py  outlet_url_matchmaker.py  ratings_data.py  text_classification_dataset.py  weighted_loss_trainer.py
