# pyproject.toml
[project]
name = "political-leaning-api"
version = "0.1.0"
description = "A Flask API for political text leaning detection"
requires-python = "==3.12.*"

dependencies = [
  "flask>=3.1.1",
  "flask-cors>=6.0.0",
  "plotly>=6.1.2",
  "pytest>=8.4.0",
  "streamlit>=1.45.1",
  "tensorflow>=2.19.0",
  "tf-keras>=2.19.0",
  "transformers>=4.52.4",
]

[build-system]
requires = ["setuptools>=61.0"] # Or another build backend like hatchling, poetry-core
build-backend = "setuptools.build_meta"

# --- setuptools configuration for finding packages ---
# --- CORRECTED setuptools configuration for finding packages ---
[tool.setuptools.packages.find] # <-- Notice the '.find' here
where = ["src"]                  # This line now goes under '.find'
# If you also need 'include' for specific packages within 'src', it goes here too:
# include = ["backend*", "frontend*"] # Example if both are primary packages