# pyproject.toml
[project]
name = "political-leaning-api"
version = "0.1.0"
description = "A Flask API for political text leaning detection"
requires-python = "==3.12.*"

dependencies = [
  "flask>=3.1.1",
  "flask-cors>=6.0.0",
  "plotly>=6.1.2",
  "pytest>=8.4.0",
  "streamlit>=1.45.1",
  "torch>=2.7.1",
  "transformers>=4.52.4",
]

[build-system]
requires = ["setuptools>=61.0"] 
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]             
include = ["backend", "frontend"]